--- a/Aula08/ex005.html
+++ b/Aula08/ex005.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,12 @@
 
 <body>
     <script>
-    var nome = window.prompt('Qual é o seu nome? ')
-    document.write(`Seu nome tem ${nome.length} letras.`) 
+        var n1 = Text(window.prompt('Qual é a sua função?'))
+        var n2 = ('1500')
+        var n3 = ('developer')
+        if (n1 == n3) {
+            window.alert(`O seu salário é igual a ${n2}`)
+        }
     </script>
 </body>
 
