--- a/Aula08/ex005.html
+++ b/Aula08/ex005.html
@@ -11,10 +11,9 @@
 <body>
     <script>
         var n1 = Text(window.prompt('Qual é a sua função?'))
-        var n2 = ('1500')
         var n3 = ('developer')
         if (n1 == n3) {
-            window.alert(`O seu salário é igual a ${n2}`)
+            window.alert(`O seu salário é igual a 1500`)
         }
     </script>
 </body>
