--- a/Aula16ex/Ex018/modelo.html
+++ b/Aula16ex/Ex018/modelo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,14 @@
     <title>Analisador de Númros</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <header>
         <h1>Analisados de Numéros</h1>
     </header>
     <section>
         <div>
-            Número (entre 1 e 100)
+            Número (entre 1 e 100):
             <input type="number" name="fnum" id="fnum">
             <input type="button" value="Adicionar" onclick="adicionar()">
             <br><br><select name="flista" id="flista" size="6"></select>
@@ -21,12 +23,13 @@
 
         </div>
         <div id="res">
-       
+
         </div>
     </section>
     <footer>
         <p>&copy;cursoemvideo</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripttt.js"></script>
 </body>
+
 </html>
